[package]
name = "redis-percentile"
version = "1.0.0"
authors = ["Poga Po <poga.po@gmail.com>", "Alex George <alex@zeus.fyi>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "*"
tdigest-rs = "0.2"
ordered-float = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
